# jacks-choice

./: .clang-format  .gitignore  CMakeLists.txt  README  animation.blend  compile.sh
src/: choice.hpp  exported_events.hpp  gpio.hpp  main.cpp
